# Patchcore_CPP

./: BUILD_WINDOWS.md  CMakeLists.txt  CMakeLists_simple.txt  IMPLEMENTATION_SUMMARY.md  README.md  RESOLUTION_HANDLING_GUIDE.md  build.sh  build_windows.ps1  commandline.txt  convert_model.py  example.py  install_faiss_windows.ps1  requirements.txt  resolution_handling_demo.py  test.sh  test_batch_processing.cpp  test_full_flow.cpp  test_memory_bank.cpp  test_model.cpp  test_patchify.cpp
include/: patchcore.h
src/: feature_extractor.cpp  inference.cpp  main.cpp  memory_bank.cpp  patchcore_detector.cpp  utils.cpp
